# monetra-ai

./: .gitignore  Dockerfile  README.md  consumer.py  entrypoint.sh  fly.toml  main.py  manual_test.py  pyproject.toml  query_test.py  run.py  test.py
api/: __init__.py  models.py  nl.py
config/: config.py
config/topics/: transaction.py
nl/: llm_parse.py  models.py  nl_query_processor.py  prompt.py
nl/llm_providers/: base.py  factory.py  groq_provider.py  ollama_provider.py
rag/: embedder.py  models.py  qdrant_indexer.py  qdrant_retrieval.py
rag/embedder_providers/: base.py  factory.py  google_model.py  hf_model.py  ollama_model.py
rag/schemas/: enums.py  transaction.py
rag/search/: filters.py  retrieval.py
run_service/: Dockerfile  run.py
services/: nl.py
