[project]
name = "monetra-ai"
version = "0.1.0"
description = ""
authors = [
    { name = "Preqsy", email = "obbyprecious24@gmail.com" }
]
readme = "README.md"
requires-python = "3.11.9"

dependencies = [
    "llama-index (>=0.14.12,<0.15.0)",
    "qdrant-client (>=1.16.2,<2.0.0)",
    "llama-index-vector-stores-qdrant (>=0.9.0,<0.10.0)",
    "llama-index-llms-ollama (>=0.9.1,<0.10.0)",
    "fastapi[all] (>=0.128.0,<0.129.0)",
    "llama-index-embeddings-ollama (>=0.8.5,<0.9.0)",
    "confluent-kafka (>=2.13.0,<3.0.0)",
    "openai (>=2.14.0,<3.0.0)",

    # CPU-only Torch
    "torch==2.2.2",
    "numpy (<2)",
    "google-genai (>=1.57.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
